dodavanje kontakt forme

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                         <!-- Linija ispod mora da ima validan mail na koji ce stizati poruka sa sajta-->
                         <input type="hidden" id="sendto" name="sendto" value="nemanja1997nedeljkovic@gmail.com" />
                         <br />
-                        <input type="hidden" id="sendfrom" name="sendfrom" value="contact@nekafirma.rs" />
+                        <input type="hidden" id="sendfrom" name="sendfrom" value="kontaktcentar@rts.rs" />
                         <br />
                     </div>
                 </div>
